--- a/backend/templates/style_color_picker.html
+++ b/backend/templates/style_color_picker.html
@@ -10,8 +10,8 @@
 <script>
     $(function(){
         $('.colorpicker').colorpicker({
-		"horizontal": true,
-	});
+		  "horizontal": true,
+	   });
     });
 </script>
 {% endblock extra_scripts %}
@@ -35,12 +35,12 @@
 		<input id="id_read_more_color" class="form-control colorpicker" name="read_more_color" type="text" value="{{ form.read_more_color.value }}" />
 	</div>
 	<div class="form-group">
-		<label for="id_header_img">{% trans 'Read more color' %}:</label>
+		<label for="id_header_img">{% trans 'Header image' %}:</label>
 		<input id="id_header_img" class="form-control " name="header_img" type="text" value="{{ form.header_img.value }}" />
-		<img src="{{ form.header_img.value }}">
+		<img style="max-width: 100%" src="{{ form.header_img.value }}">
 	</div>
 	<div class="form-group">
-	    <input type="submit" value="{% trans 'Update color' %}" />
+	    <input type="submit" value="{% trans 'Update style' %}" />
     	</div>
 </form>
 {% endblock 'content' %}
